[package]
name = "prompt"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[[example]]
name = "inquirer"
path = "examples/inquirer.rs"


[dependencies]
termion = "1.5"
valid = { git = "https://github.com/kildevaeld/valid-rs" }
strip-ansi-escapes = "0.1"
lazy_static = "1.4"
